--- a/css/introduction.css
+++ b/css/introduction.css
@@ -2,26 +2,75 @@
 	Introduction 
    ========================================================= */
 .introduction {
-  background-color: #221f20;
+  background-color: #333;
   margin-top: 141px;
+  overflow: auto;
 }
-.introduction h1 {
+.introduction .container {
+  padding: 40px 30px 70px;
+  overflow: auto;
+}
+.introduction .profile-photo-outside {
+  display: none;
+}
+.introduction .profile-photo-inner {
+  display: block;
+  max-width: 200px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  vertical-align: top;
+}
+.introduction .intro-description-container {
+  text-align: left;
+  background-color: #fff;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding: 16px;
+  box-sizing: border-box;
+  vertical-align: top;
+}
+.introduction span {
   font-family: 'Roboto', sans-serif;
   color: #333;
   font-size: 18px;
-  color: #fff;
-  text-align: center;
-  padding: 40px 30px 70px;
-  line-height: 23px;
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 300;
+  line-height: normal;
 }
 @media (min-width: 690px) {
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
   .introduction {
     margin-top: 112px;
   }
-  .introduction h1 {
-    max-width: 80%;
+  .introduction .container {
+    overflow: auto;
+    max-width: 90%;
     margin: 0 auto;
+    text-align: center;
+  }
+  .introduction .profile-photo-outside {
+    display: inline-block;
+    margin-right: 30px;
+  }
+  .introduction .profile-photo-outside img {
+    width: 210px;
+  }
+  .introduction .profile-photo-inner {
+    display: none;
+  }
+  .introduction .intro-description-container {
+    width: 60%;
+    padding: 30px;
+    display: inline-block;
+  }
+}
+@media (min-width: 1600px) {
+  .introduction .profile-photo-outside img {
+    width: 265px;
+  }
+  .introduction span {
     font-size: 21px;
+    margin-bottom: 25px;
   }
 }
