--- a/css/contact.css
+++ b/css/contact.css
@@ -3,16 +3,16 @@
    ========================================================= */
 .contact-section {
   background-color: #fff;
-  padding-bottom: 30px;
+  padding-bottom: 40px;
   overflow: auto;
 }
 .contact-section .contact-title {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Cantarell', sans-serif;
   text-align: center;
   font-size: 36px;
   color: #333;
   font-weight: 500;
-  margin: 30px 0;
+  margin: 25px 0;
 }
 .contact-section .contact-form-container {
   max-width: 90%;
@@ -21,11 +21,12 @@
   color: #333;
 }
 .contact-section .contact-form-container .my-email {
-  font-size: 20px;
+  font-size: 16px;
   margin-left: 40px;
   position: relative;
   margin-bottom: 20px;
   color: #333;
+  display: block;
 }
 .contact-section .contact-form-container .my-email:before {
   position: absolute;
@@ -33,8 +34,27 @@
   background-image: url('../../images/email-icon.svg');
   width: 28px;
   height: 28px;
-  color: #333;
   left: -38px;
+  bottom: -3px;
+  background-position: 0;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.contact-section .contact-form-container .my-location {
+  font-size: 16px;
+  margin-left: 40px;
+  position: relative;
+  margin-bottom: 30px;
+  display: block;
+}
+.contact-section .contact-form-container .my-location:before {
+  position: absolute;
+  content: "";
+  background-image: url('../../images/location.svg');
+  width: 22px;
+  height: 29px;
+  color: #333;
+  left: -35px;
   bottom: -2px;
   background-position: 0;
   background-size: 100%;
@@ -42,7 +62,7 @@
 }
 .contact-section .contact-form-container .label {
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 500;
   margin-top: 10px;
   margin-bottom: 10px;
   display: block;
@@ -54,49 +74,85 @@
   padding: 10px;
   font-size: 16px;
   outline: 0;
-  border: 1px #bbb solid;
+  border: 1px solid #333;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
+}
+.contact-section .contact-form-container input:focus {
+  outline: #00addc auto 5px;
 }
 .contact-section .contact-form-container #message {
   width: 100%;
   box-sizing: border-box;
   padding: 10px;
   margin-bottom: 10px;
-  border: 1px #bbb solid;
+  border: 1px solid #333;
   font-size: 16px;
   font-weight: 300;
   color: #333;
   font-family: 'Roboto', sans-serif;
+  overflow: hidden;
+}
+.contact-section .contact-form-container #message:focus {
+  outline: #00addc auto 5px;
 }
 .contact-section .contact-form-container .submit-btn {
-  transition: all 0.2s;
-  font-size: 20px;
-  max-width: 400px;
+  transition: all .2s;
+  border-radius: 3px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  border: 1px solid #333;
+  padding: 12px 20px;
+  background: transparent;
+  display: inline-block;
+  max-width: 300px;
   margin: 0 auto;
-  display: block;
+  font-weight: 400;
+  color: #333;
 }
 .contact-section .contact-form-container .submit-btn:hover {
   background-color: #00addc;
   color: #fff;
+  border-color: #fff;
 }
 @media (min-width: 690px) {
   .contact-section .contact-form-container {
     max-width: 50%;
     margin: 0 auto;
   }
+  .contact-section .contact-form-container .my-email,
+  .contact-section .contact-form-container .my-location {
+    font-size: 20px;
+  }
+  .contact-section .contact-form-container .my-email {
+    margin-bottom: 10px;
+  }
+  .contact-section .contact-form-container .my-email:before {
+    bottom: -1px;
+  }
 }
 @media (min-width: 1200px) {
   .contact-section .contact-form-container {
     max-width: 70%;
+    overflow: auto;
   }
-  .contact-section .my-email {
+  .contact-section .my-info {
     float: right;
     width: auto;
+  }
+  .contact-section .my-info .my-email {
+    margin-bottom: 20px;
   }
   .contact-section .contact-form {
     float: left;
     width: 60%;
+    margin-top: -11px;
+  }
+}
+@media (min-width: 1800px) {
+  .contact-section .contact-form-container {
+    max-width: 48%;
+    overflow: auto;
   }
 }
