--- a/css/introduction.css
+++ b/css/introduction.css
@@ -13,30 +13,38 @@
 .introduction .profile-photo-outside {
   display: none;
 }
+.introduction .profile-photo-outside img {
+  border-radius: 50%;
+}
 .introduction .profile-photo-inner {
   display: block;
   max-width: 200px;
   margin: 0 auto;
   padding-bottom: 20px;
   vertical-align: top;
+  border-radius: 50%;
 }
 .introduction .intro-description-container {
   text-align: left;
-  background-color: #fff;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 16px;
   box-sizing: border-box;
   vertical-align: top;
+  background-color: transparent;
+  border: 1px solid #fff;
 }
 .introduction span {
-  font-family: 'Roboto', sans-serif;
-  color: #333;
-  font-size: 18px;
+  font-family: 'Cantarell', sans-serif;
+  color: #fff;
+  font-size: 21px;
   display: block;
   margin-bottom: 10px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: normal;
+}
+.introduction span:last-of-type {
+  margin-bottom: 0;
 }
 @media (min-width: 690px) {
   /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
@@ -70,7 +78,7 @@
     width: 265px;
   }
   .introduction span {
-    font-size: 21px;
-    margin-bottom: 25px;
+    font-size: 24px;
+    margin-bottom: 10px;
   }
 }
