--- a/less/templates/homepage/partials/portfolio-projects.less
+++ b/less/templates/homepage/partials/portfolio-projects.less
@@ -4,7 +4,6 @@
 
 .portfolio-projects {
 	
-		
 	.project-title {
 		padding: 50px 30px 0;
 		font-family: 'Roboto', sans-serif;
@@ -56,7 +55,12 @@
 			margin-bottom: 20px;
 			display: inline-block;
 			vertical-align: middle;
-			
+			transition: all 0.2s ease-out;
+
+			&:hover {
+				transform: scale(1.15, 1.15);
+			}
+
 			.project-tool-link {
 
 				&:hover {
